Se realiza código de funcionamiento

--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
           </div>
 
           <div class="generator__container--view view">
-            <p id="view__output"><span>Click en botón generar</span></p>
+            <textarea id="view__output" class="view__output" readonly>Click en botón generar</textarea>
           </div>
 
           <div class="generator__container--buttons">
 
-            <button class="button__copy">
+            <button id="button__copy" class="button__copy">
               Copiar <i class='bx bxs-copy'></i>
             </button>
-            <button class="button__update">
+            <button id="button__update" class="button__update">
               Generar <i class='bx bx-revision'></i>
             </button>
 
@@ -112,6 +112,8 @@
       </div>
     </footer>
   </div>
+
+  <script src="./js/index.js"></script>
 
 </body>
 
